--- a/index.html
+++ b/index.html
@@ -66,11 +66,123 @@
 
 
     </section>
+    <!-- what i do section -->
+
+
+    <section class="skills">
+        <h3 class="section-title">What I Do</h3>
+        <p class="description dark-1">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+    <div class="sc">
+        <div class="skill">
+            <img src="images/icons/js.png" alt="">
+            <h4 class="st">Vanilla JavaScript</h4>
+            <p class="sd">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/react.png" alt="">
+            <h4 class="st">React</h4>
+            <p class="sd">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/nodejs.png" alt="">
+            <h4 class="st">Node.js</h4>
+            <p class="sd">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/mongo.png" alt="">
+            <h4 class="st">MongoDB</h4>
+            <p class="sd">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <!-- <div class="skill">
+            <img src="images/icons/express.png" alt="">
+            <h4 class="st">Express.js</h4>
+            <p class="sd">Skilled in creating RESTful APIs with Express.js</p>
+        </div> -->
+    </div>    
+
+
+    </section>
+<!-- summary -->
+        <section class="resume">
+            <h3 class="section-title-2">A summary of My Resume</h3>
+            <div class="rc">
+                <div class="resume-content">
+                    <h3 class="rct">My Education</h3>
+                    <div class="exp">
+                        <h4 class="expt">Master in Computer Engineering</h4>
+                        <h5 class="expst">Harvard University / 2015 - 2017</h5>
+                        <div class="exp-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="exp">
+                        <h4 class="expt">Master in Computer Engineering</h4>
+                        <h5 class="expst">Harvard University / 2015 - 2017</h5>
+                        <div class="exp-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="exp">
+                        <h4 class="expt">Master in Computer Engineering</h4>
+                        <h5 class="expst">Harvard University / 2015 - 2017</h5>
+                        <div class="exp-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    
+                </div>
+                <div class="resume-content">
+                    <h3 class="rct">My Experience</h3>
+                    <div class="exp">
+                        <h4 class="expt">Sr. Font End Developer</h4>
+                        <h5 class="expst">Apple Inc / 2020 - Current</h5>
+                        <div class="exp-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="exp">
+                        <h4 class="expt">Jr. Font End Developer</h4>
+                        <h5 class="expst">Dribbble Inc / 2018 - 2022</h5>
+                        <div class="exp-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="exp">
+                        <h4 class="expt">HTML Developer</h4>
+                        <h5 class="expst">Adobe Inc / 2017 - 2018</h5>
+                        <div class="exp-description">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="btn1">Download CV</div>
+
+        </section>
 
     
 
-    <footer>
+    <footer class="secondary-background">
+        <div class="fc">
+            <div class="section-title">Let's Connect</div>
+            <p class="description dark-1 ">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="img">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="fc">
+            <div class="section-title">Let's Message Me</div>
+            <form action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea cols="30" rows="10" placeholder="Your Message"></textarea>
+                <button class="btn" type="submit">Submit</button>
+            </form>
 
+        </div>
     </footer>
 </body>
 </html>
