--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/8cae087c87.js" crossorigin="anonymous"></script>
 
 </head>
 <body class="open-sans-normal">
@@ -32,8 +33,8 @@
                 <h1 class="title">Mary Hardy</h1>
                 <p class="description dark-1">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
 
-                <button class="btn-2">Download CV</button>
-                <button class="btn-2">Contact Me</button>
+                <button class="btn-2"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-2"> <i class="fa-solid fa-download"></i> Contact Me</button>
             </div>
             <img class="img" src="images/hardy.png" alt="">
 
